# calee

./: .env.example  .gitignore  README.md  index.html  requirements.txt  start.bat  start.sh  vercel.json
api/: index.py  recognize.py  test.py
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  dashboard.py  foods.py  meals.py  upload.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/seeds/: __init__.py
backend/app/services/: __init__.py  food_service.py  meal_service.py
frontend/static/css/: styles.css
frontend/templates/: base.html  dashboard.html  food_detail.html  profile.html  progress.html  search.html  upload.html
